try to fix image rescaling on mobile again pt 7

--- a/assets/main.css
+++ b/assets/main.css
@@ -48,7 +48,7 @@ img {
   vertical-align: middle; }
 
 .parent {
-  width: 450px;
+  width: auto;
   margin: auto;
 }
 
